--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src//*.jsx",
-    "lint:fix": "eslint ./src//*.jsx --fix",
+    "lint": "eslint ./src/**/*.jsx",
+    "lint:fix": "eslint ./src/**/*.jsx --fix",
     "format": "prettier --write ./src",
     "prepare": "husky"
   },
@@ -59,7 +59,7 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js, jsx}": [
+    "src/**/*.jsx": [
       "eslint --fix",
       "prettier --write"
     ]
